# adventofpy

./: .gitignore  README.md  adventofpy.py  pyproject.toml
year_2021/day01/: part1.py  part2.py
year_2021/day02/: part1.py  part2.py
year_2021/day03/: part1.py  part2.py
year_2021/day04/: part1.py  part2.py
year_2021/day05/: part1.py  part2.py
year_2021/day06/: part1.py  part2.py
year_2021/day07/: part1.py  part2.py
year_2021/day08/: part1.py  part2.py
year_2021/day09/: part1.py  part2.py
year_2021/day10/: part1.py  part2.py
year_2021/day11/: part1.py  part2.py
year_2021/day12/: part1.py  part2.py
year_2021/day13/: part1.py  part2.py
year_2021/day14/: part1.py  part2.py
year_2021/day15/: part1.py  part2.py
year_2022/day01/: part1.py  part2.py
year_2022/day02/: part1.py  part2.py
year_2022/day03/: part1.py  part2.py
year_2022/day04/: part1.py  part2.py
year_2022/day05/: part1.py  part2.py
year_2022/day06/: part1.py  part2.py
year_2022/day07/: part1.py  part2.py
year_2022/day08/: part1.py  part2.py
year_2022/day09/: part1.py  part2.py
year_2022/day10/: part1.py  part2.py
year_2022/day11/: part1.py  part2.py
year_2022/day12/: part1.py  part2.py
year_2022/day13/: part1.py  part2.py
year_2022/day14/: part1.py  part2.py
year_2022/day15/: part1.py  part2.py
year_2025/day01/: part1.py  part2.py
year_2025/day02/: part1.py  part2.py
year_2025/day03/: part1.py  part2.py
year_2025/day04/: part1.py  part2.py
year_2025/day05/: part1.py  part2.py
year_2025/day06/: part1.py  part2.py
year_2025/day07/: part1.py  (+1 more)
(+1 files in other folders)
