[project]
name = "adventofpy"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "autopep8==1.6.0",
    "debugpy==1.5.1",
    "flake8==4.0.1",
    "mccabe==0.6.1",
    "pycodestyle==2.8.0",
    "pyflakes==2.4.0",
    "toml==0.10.2",
]
